@@ -1,0 +1,1 @@
+libqgis-customwidgets: no-symbols-control-file
