@@ -1,1 +1,0 @@
-libqgis-customwidgets{QGIS_ABI}: no-symbols-control-file
