@@ -4,8 +4,9 @@ qgis (2.7.0) UNRELEASED; urgency=medium
   * run tests in en_US.UTF-8 locale
   * add build dependency to python-qscintilla2 for tests
   * merge some downstream debian changes
+  * rename libqgis-customwidgets{QGIS_ABI} to libqgis-customwidgets
 
- -- Jürgen E. Fischer <jef@norbit.de>  Fri, 31 Oct 2014 13:00:45 +0100
+ -- Jürgen E. Fischer <jef@norbit.de>  Sun, 30 Nov 2014 16:49:54 +0100
 
 qgis (2.6.0) unstable; urgency=medium
 
